--- a/LM_SCAD_MCP_np_MODULE-SNP.ipynb
+++ b/LM_SCAD_MCP_np_MODULE-SNP.ipynb
@@ -9,14 +9,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-21T03:08:48.952417Z",
-     "start_time": "2022-07-21T03:08:48.942310Z"
+     "end_time": "2022-07-21T23:39:52.084244Z",
+     "start_time": "2022-07-21T23:39:51.711327Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/Snoopy/anaconda3/lib/python3.9/site-packages/paramiko/transport.py:236: CryptographyDeprecationWarning: Blowfish has been deprecated\n",
+      "  \"class\": algorithms.Blowfish,\n"
+     ]
+    }
+   ],
    "source": [
     "# import os, sys\n",
     "# import collections\n",
@@ -48,11 +57,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-20T21:53:42.508438Z",
-     "start_time": "2022-07-20T21:53:42.352630Z"
+     "end_time": "2022-07-21T23:39:52.241366Z",
+     "start_time": "2022-07-21T23:39:52.085500Z"
     }
    },
    "outputs": [],
@@ -172,11 +181,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-20T21:53:42.532008Z",
-     "start_time": "2022-07-20T21:53:42.509749Z"
+     "end_time": "2022-07-21T23:39:52.258622Z",
+     "start_time": "2022-07-21T23:39:52.242452Z"
     }
    },
    "outputs": [],
@@ -254,9 +263,11 @@
     "    if _np.all(beta_0==_np.ones(1)):\n",
     "        _ = _np.zeros(p)\n",
     "        _y = y[_np.intersect1d(outcome_iid, gene_iid, assume_unique=True, return_indices=True)[1]]\n",
+    "        _y -= _np.mean(_y)\n",
     "        for j in SNP_ind:\n",
     "            _X = bed.read(_np.s_[:,j], dtype=_np.int8).flatten()\n",
     "            _X = _X[gene_ind] # get gene iid also in outcome iid\n",
+    "            _X -= _np.mean(_X)\n",
     "            _[j] = _X@_y\n",
     "        beta = _np.sign(_)\n",
     "        beta = _np.hstack((np.array([0]), beta))\n",
@@ -343,48 +354,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-20T21:53:43.091666Z",
-     "start_time": "2022-07-20T21:53:42.533369Z"
+     "end_time": "2022-07-21T23:39:57.568355Z",
+     "start_time": "2022-07-21T23:39:52.260248Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "L_convex is: 951.1723835414942\n",
+      "[[ 4.68810205e+00  2.78015194e+00  0.00000000e+00  3.29606170e+00\n",
+      "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "   0.00000000e+00  0.00000000e+00]\n",
+      " [ 4.69746444e+00  2.77748954e+00  0.00000000e+00  3.29608707e+00\n",
+      "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "   0.00000000e+00  0.00000000e+00]\n",
+      " [ 4.70680489e+00  2.77636314e+00  0.00000000e+00  3.29764527e+00\n",
+      "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "   0.00000000e+00  0.00000000e+00]\n",
+      " [ 4.71611455e+00  2.77676152e+00  0.00000000e+00  3.30072520e+00\n",
+      "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "   0.00000000e+00  0.00000000e+00]\n",
+      " [ 4.72538466e+00  2.77867357e+00  0.00000000e+00  3.30531587e+00\n",
+      "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "   0.00000000e+00  0.00000000e+00]\n",
+      " [ 4.73460652e+00  2.78208830e+00  0.00000000e+00  3.31140639e+00\n",
+      "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "   0.00000000e+00  0.00000000e+00]\n",
+      " [ 4.74377155e+00  2.78699479e+00  0.00000000e+00  3.31898599e+00\n",
+      "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "   0.00000000e+00  0.00000000e+00]\n",
+      " [ 4.75287125e+00  2.79338227e+00  0.00000000e+00  3.32804399e+00\n",
+      "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "   0.00000000e+00  0.00000000e+00]\n",
+      " [ 4.76189719e+00  2.80124005e+00  0.00000000e+00  3.33856981e+00\n",
+      "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "   0.00000000e+00  0.00000000e+00]\n",
+      " [ 4.77084106e+00  2.81055754e+00  0.00000000e+00  3.35055299e+00\n",
+      "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "   0.00000000e+00  0.00000000e+00]\n",
+      " [ 4.77969510e+00  2.82132473e+00 -7.89312850e-04  3.36398364e+00\n",
+      "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "   0.00000000e+00  0.00000000e+00]\n",
+      " [ 4.78845391e+00  2.83353392e+00 -3.22176221e-03  3.37885425e+00\n",
+      "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "   0.00000000e+00  0.00000000e+00]\n",
+      " [ 4.79711399e+00  2.84717923e+00 -7.29811234e-03  3.39515922e+00\n",
+      "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "   0.00000000e+00  0.00000000e+00]\n",
+      " [ 4.80566934e+00  2.86225228e+00 -1.30214002e-02  3.41315373e+00\n",
+      "   0.00000000e+00  1.39965112e-03  0.00000000e+00  1.44657618e-03\n",
+      "   5.90131644e-04  0.00000000e+00]\n",
+      " [ 3.08265673e+00  1.17818955e+01 -1.97373624e+01  1.80736280e+01\n",
+      "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "   0.00000000e+00  0.00000000e+00]\n",
+      " [ 3.08297454e+00  1.17818467e+01 -1.97298979e+01  1.80712329e+01\n",
+      "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "   0.00000000e+00  0.00000000e+00]\n",
+      " [ 3.08327757e+00  1.17817842e+01 -1.97224589e+01  1.80688264e+01\n",
+      "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "   0.00000000e+00  0.00000000e+00]\n",
+      " [ 3.08356600e+00  1.17817082e+01 -1.97150451e+01  1.80664088e+01\n",
+      "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "   0.00000000e+00  0.00000000e+00]\n",
+      " [ 3.08384003e+00  1.17816188e+01 -1.97076563e+01  1.80639802e+01\n",
+      "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "   0.00000000e+00  0.00000000e+00]\n",
+      " [ 3.08409933e+00  1.17815158e+01 -1.97002928e+01  1.80615403e+01\n",
+      "   6.69936491e-04  5.30212930e-05  8.34657276e-04 -6.31807927e-04\n",
+      "  -1.16216841e-04 -6.68625208e-05]]\n"
+     ]
+    }
+   ],
    "source": [
-    "import pandas as pd\n",
     "import numpy as np\n",
     "from bed_reader import open_bed\n",
     "\n",
-    "bed_file = r\"/home/kyang/UKBB/genetics/cal/ukb_cal_chr22_v2.bed\"\n",
-    "bim_file = r\"/home/kyang/UKBB/genetics/cal/ukb_snp_chr22_v2.bim\"\n",
-    "fam_file = r\"/home/kyang/UKBB/genetics/cal/ukb45551_cal_chr22_v2_s488264.fam\"\n",
-    "outcome_file = r\"/home/kyang/UKBB/tabular/archive/40663/ukb40663.csv\"\n",
-    "fields = [\"eid\", \"50-0.0\"]\n",
+    "bed_file = r\"./sim/sim1.bed\"\n",
+    "bim_file = r\"./sim/sim1.bim\"\n",
+    "fam_file = r\"./sim/sim1.fam\"\n",
     "\n",
-    "height = pd.read_csv(outcome_file, skipinitialspace=True, usecols=fields, encoding= 'unicode_escape').dropna()\n",
-    "outcome_iid = list(height.loc[:,\"eid\"])\n",
-    "outcome_iid = np.array(list(map(str, outcome_iid)))\n",
-    "outcome = np.array(list(height.loc[:,\"50-0.0\"]))\n",
+    "_bed = open_bed(filepath=bed_file, fam_filepath=fam_file, bim_filepath=bim_file)\n",
+    "outcome = np.random.rand(_bed.iid_count)\n",
+    "outcome_iid = _bed.iid\n",
+    "true_beta = np.array([12.,-15.,16.])\n",
     "\n",
-    "bed1 = open_bed(filepath=bed_file, fam_filepath=fam_file, bim_filepath=bim_file)\n",
+    "# here since the plink files are very small, I just use Python to calculate L_convex -- normally it should be calculated using other softwares, e.g., flashpca \n",
+    "temp = np.zeros((_bed.iid_count, _bed.sid_count))\n",
+    "for j in np.arange(_bed.sid_count):\n",
+    "    temp[:,j] = _bed.read(_np.s_[:,j], dtype=_np.int8).flatten()\n",
+    "L_convex = 1/_bed.iid_count*(_np.linalg.eigvalsh(temp@temp.T)[-1])\n",
+    "print(\"L_convex is:\", L_convex)\n",
     "\n",
-    "N = len(bed1.iid)\n",
-    "p = len(bed1.sid)\n",
-    "SNP_ind = np.arange(300)\n",
+    "for j in np.arange(3):\n",
+    "    outcome += true_beta[j]*_bed.read(_np.s_[:,j], dtype=_np.int8).flatten()\n",
+    "\n",
+    "iid_ind = np.random.permutation(np.arange(_bed.iid_count))\n",
+    "\n",
+    "outcome = outcome[iid_ind]\n",
+    "outcome_iid = outcome_iid[iid_ind]\n",
     "\n",
     "print(SNP_solution_path_LM(bed_file=bed_file, \n",
     "                            bim_file=bim_file, \n",
     "                            fam_file=fam_file, \n",
     "                            outcome=outcome, \n",
     "                            outcome_iid=outcome_iid, \n",
-    "                            lambda_=np.linspace(.005,.5,20)[::-1],\n",
-    "                            SNP_ind=SNP_ind, \n",
-    "                            L_convex=1e-2, \n",
+    "                            lambda_=np.linspace(.001,10,20)[::-1],\n",
+    "                            SNP_ind=np.arange(10), \n",
+    "                            L_convex=L_convex, \n",
     "                            beta_0 = np.ones(1),\n",
-    "                            tol=1e-2, maxit=500, penalty=\"SCAD\", a=3.7, gamma=2.))\n",
-    "\n",
-    "\n"
+    "                            tol=1e-2, maxit=500, penalty=\"SCAD\", a=3.7, gamma=2.)[:,:10])\n"
    ]
   },
   {
