--- a/LM_SCAD_MCP_np_MODULE-SNP_parallel.ipynb
+++ b/LM_SCAD_MCP_np_MODULE-SNP_parallel.ipynb
@@ -9,14 +9,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-20T21:53:46.184805Z",
-     "start_time": "2022-07-20T21:53:45.806314Z"
+     "end_time": "2022-07-21T23:39:56.815552Z",
+     "start_time": "2022-07-21T23:39:56.369870Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/Snoopy/anaconda3/lib/python3.9/site-packages/paramiko/transport.py:236: CryptographyDeprecationWarning: Blowfish has been deprecated\n",
+      "  \"class\": algorithms.Blowfish,\n"
+     ]
+    }
+   ],
    "source": [
     "# import os, sys\n",
     "# import collections\n",
@@ -50,11 +59,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-20T21:53:46.336731Z",
-     "start_time": "2022-07-20T21:53:46.186182Z"
+     "end_time": "2022-07-21T23:39:57.002149Z",
+     "start_time": "2022-07-21T23:39:56.817015Z"
     }
    },
    "outputs": [],
@@ -174,11 +183,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-20T21:53:46.356429Z",
-     "start_time": "2022-07-20T21:53:46.338029Z"
+     "end_time": "2022-07-21T23:39:57.027585Z",
+     "start_time": "2022-07-21T23:39:57.003520Z"
     }
    },
    "outputs": [],
@@ -226,7 +235,7 @@
     "    __XTXbeta = _np.hstack(_XTXbeta)\n",
     "    _XTXbeta = _np.zeros(p+1)\n",
     "    _XTXbeta[SNP_ind+1] = __XTXbeta\n",
-    "    _XTXbeta[0] = [_np.sum(_)]\n",
+    "    _XTXbeta[0] = _np.sum(_)\n",
     "    del _\n",
     "    del __XTXbeta\n",
     "\n",
@@ -275,6 +284,8 @@
     "    gene_iid = _np.array(list(bed.iid))\n",
     "    N = len(_np.intersect1d(outcome_iid, gene_iid, assume_unique=True, return_indices=True)[1])\n",
     "    if _np.all(beta_0==_np.ones(1)):        \n",
+    "        _y = y[_np.intersect1d(outcome_iid, gene_iid, assume_unique=True, return_indices=True)[1]]\n",
+    "        _y -= _np.mean(_y)\n",
     "        def __parallel_assign(_ind):\n",
     "            import numpy as _np\n",
     "            k=0\n",
@@ -282,11 +293,11 @@
     "            for j in _ind:\n",
     "                _X = bed.read(_np.s_[:,j], dtype=_np.int8).flatten()\n",
     "                _X = _X[gene_ind] # get gene iid also in outcome iid\n",
-    "                __[k] = _X@y\n",
+    "                _X -= _np.mean(_X)\n",
+    "                __[k] = _X@_y\n",
     "                k += 1\n",
     "            return __\n",
     "        # multiprocessing starts here\n",
-    "        _y = y[_np.intersect1d(outcome_iid, gene_iid, assume_unique=True, return_indices=True)[1]]\n",
     "        n_slices = _np.ceil(len(SNP_ind)/chunck_size)\n",
     "        with _mp.Pool(_mp.cpu_count()) as pl:\n",
     "            _XTy = pl.map(__parallel_assign, _np.array_split(SNP_ind, n_slices))\n",
@@ -376,48 +387,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-20T21:53:46.922314Z",
-     "start_time": "2022-07-20T21:53:46.358191Z"
+     "end_time": "2022-07-21T23:41:38.201260Z",
+     "start_time": "2022-07-21T23:39:57.029130Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "L_convex is: 951.1723835414942\n",
+      "[[ 4.68570158e+00  2.78309641e+00  0.00000000e+00  3.29216679e+00\n",
+      "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "   0.00000000e+00  0.00000000e+00]\n",
+      " [ 4.69505969e+00  2.78045770e+00  0.00000000e+00  3.29218277e+00\n",
+      "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "   0.00000000e+00  0.00000000e+00]\n",
+      " [ 4.70439584e+00  2.77935493e+00  0.00000000e+00  3.29373155e+00\n",
+      "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "   0.00000000e+00  0.00000000e+00]\n",
+      " [ 4.71370118e+00  2.77977687e+00  0.00000000e+00  3.29680205e+00\n",
+      "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "   0.00000000e+00  0.00000000e+00]\n",
+      " [ 4.72296692e+00  2.78171242e+00  0.00000000e+00  3.30138327e+00\n",
+      "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "   0.00000000e+00  0.00000000e+00]\n",
+      " [ 4.73218439e+00  2.78515058e+00  0.00000000e+00  3.30746433e+00\n",
+      "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "   0.00000000e+00  0.00000000e+00]\n",
+      " [ 4.74134501e+00  2.79008046e+00  0.00000000e+00  3.31503444e+00\n",
+      "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "   0.00000000e+00  0.00000000e+00]\n",
+      " [ 4.75044025e+00  2.79649126e+00  0.00000000e+00  3.32408294e+00\n",
+      "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "   0.00000000e+00  0.00000000e+00]\n",
+      " [ 4.75946173e+00  2.80437229e+00  0.00000000e+00  3.33459925e+00\n",
+      "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "   0.00000000e+00  0.00000000e+00]\n",
+      " [ 4.76840109e+00  2.81371298e+00  0.00000000e+00  3.34657290e+00\n",
+      "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "   0.00000000e+00  0.00000000e+00]\n",
+      " [ 4.77725058e+00  2.82450329e+00 -7.58903552e-04  3.35999398e+00\n",
+      "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "   0.00000000e+00  0.00000000e+00]\n",
+      " [ 4.78600473e+00  2.83673546e+00 -3.16109442e-03  3.37485493e+00\n",
+      "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "   0.00000000e+00  0.00000000e+00]\n",
+      " [ 4.79466005e+00  2.85040362e+00 -7.20732333e-03  3.39115015e+00\n",
+      "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "   0.00000000e+00  0.00000000e+00]\n",
+      " [ 4.80321054e+00  2.86549938e+00 -1.29006369e-02  3.40913042e+00\n",
+      "   0.00000000e+00  1.40406059e-03  0.00000000e+00  1.37587814e-03\n",
+      "   5.91850821e-04  0.00000000e+00]\n",
+      " [ 3.05713929e+00  1.18139584e+01 -1.97085742e+01  1.80451553e+01\n",
+      "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "   0.00000000e+00  0.00000000e+00]\n",
+      " [ 3.05742574e+00  1.18138697e+01 -1.97011454e+01  1.80427552e+01\n",
+      "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "   0.00000000e+00  0.00000000e+00]\n",
+      " [ 3.05769773e+00  1.18137676e+01 -1.96937417e+01  1.80403441e+01\n",
+      "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "   0.00000000e+00  0.00000000e+00]\n",
+      " [ 3.05795545e+00  1.18136524e+01 -1.96863628e+01  1.80379222e+01\n",
+      "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "   0.00000000e+00  0.00000000e+00]\n",
+      " [ 3.05819908e+00  1.18135242e+01 -1.96790085e+01  1.80354895e+01\n",
+      "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
+      "   0.00000000e+00  0.00000000e+00]\n",
+      " [ 3.05842831e+00  1.18133827e+01 -1.96716792e+01  1.80330460e+01\n",
+      "   6.90055224e-04  3.13074886e-05  8.92412028e-04 -7.20546449e-04\n",
+      "  -1.38766174e-04 -5.02602628e-05]]\n"
+     ]
+    }
+   ],
    "source": [
-    "import pandas as pd\n",
     "import numpy as np\n",
     "from bed_reader import open_bed\n",
     "\n",
-    "bed_file = r\"/home/kyang/UKBB/genetics/cal/ukb_cal_chr22_v2.bed\"\n",
-    "bim_file = r\"/home/kyang/UKBB/genetics/cal/ukb_snp_chr22_v2.bim\"\n",
-    "fam_file = r\"/home/kyang/UKBB/genetics/cal/ukb45551_cal_chr22_v2_s488264.fam\"\n",
-    "outcome_file = r\"/home/kyang/UKBB/tabular/archive/40663/ukb40663.csv\"\n",
-    "fields = [\"eid\", \"50-0.0\"]\n",
+    "bed_file = r\"./sim/sim1.bed\"\n",
+    "bim_file = r\"./sim/sim1.bim\"\n",
+    "fam_file = r\"./sim/sim1.fam\"\n",
     "\n",
-    "height = pd.read_csv(outcome_file, skipinitialspace=True, usecols=fields, encoding= 'unicode_escape').dropna()\n",
-    "outcome_iid = list(height.loc[:,\"eid\"])\n",
-    "outcome_iid = np.array(list(map(str, outcome_iid)))\n",
-    "outcome = np.array(list(height.loc[:,\"50-0.0\"]))\n",
+    "_bed = open_bed(filepath=bed_file, fam_filepath=fam_file, bim_filepath=bim_file)\n",
+    "outcome = np.random.rand(_bed.iid_count)\n",
+    "outcome_iid = _bed.iid\n",
+    "true_beta = np.array([12.,-15.,16.])\n",
     "\n",
-    "bed1 = open_bed(filepath=bed_file, fam_filepath=fam_file, bim_filepath=bim_file)\n",
+    "# here since the plink files are very small, I just use Python to calculate L_convex -- normally it should be calculated using other softwares, e.g., flashpca \n",
+    "temp = np.zeros((_bed.iid_count, _bed.sid_count))\n",
+    "for j in np.arange(_bed.sid_count):\n",
+    "    temp[:,j] = _bed.read(_np.s_[:,j], dtype=_np.int8).flatten()\n",
+    "L_convex = 1/_bed.iid_count*(_np.linalg.eigvalsh(temp@temp.T)[-1])\n",
+    "print(\"L_convex is:\", L_convex)\n",
     "\n",
-    "N = len(bed1.iid)\n",
-    "p = len(bed1.sid)\n",
-    "SNP_ind = np.arange(300)\n",
+    "for j in np.arange(3):\n",
+    "    outcome += true_beta[j]*_bed.read(_np.s_[:,j], dtype=_np.int8).flatten()\n",
+    "\n",
+    "iid_ind = np.random.permutation(np.arange(_bed.iid_count))\n",
+    "\n",
+    "outcome = outcome[iid_ind]\n",
+    "outcome_iid = outcome_iid[iid_ind]\n",
     "\n",
     "print(SNP_solution_path_LM_parallel(bed_file=bed_file, \n",
     "                                    bim_file=bim_file, \n",
     "                                    fam_file=fam_file, \n",
     "                                    outcome=outcome, \n",
     "                                    outcome_iid=outcome_iid, \n",
-    "                                    lambda_=np.linspace(.005,.5,20)[::-1],\n",
-    "                                    SNP_ind=SNP_ind, \n",
-    "                                    L_convex=1e3, \n",
+    "                                    lambda_=np.linspace(.001,10,20)[::-1],\n",
+    "                                    SNP_ind=np.arange(10), \n",
+    "                                    L_convex=L_convex, \n",
     "                                    beta_0 = np.ones(1),\n",
-    "                                    tol=1e-2, maxit=500, penalty=\"SCAD\", a=3.7, gamma=2.))\n",
-    "\n",
-    "\n"
+    "                                    tol=1e-2, maxit=500, penalty=\"SCAD\", a=3.7, gamma=2.)[:,:10])\n"
    ]
   },
   {
