--- a/logistic_SCAD_MCP_np_MODULE-SNP.ipynb
+++ b/logistic_SCAD_MCP_np_MODULE-SNP.ipynb
@@ -9,14 +9,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-20T21:53:54.314861Z",
-     "start_time": "2022-07-20T21:53:53.926358Z"
+     "end_time": "2022-07-21T23:41:22.547624Z",
+     "start_time": "2022-07-21T23:41:22.080244Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/Snoopy/anaconda3/lib/python3.9/site-packages/paramiko/transport.py:236: CryptographyDeprecationWarning: Blowfish has been deprecated\n",
+      "  \"class\": algorithms.Blowfish,\n"
+     ]
+    }
+   ],
    "source": [
     "# import os, sys\n",
     "# import collections\n",
@@ -49,11 +58,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-20T21:53:54.470338Z",
-     "start_time": "2022-07-20T21:53:54.316251Z"
+     "end_time": "2022-07-21T23:41:22.721985Z",
+     "start_time": "2022-07-21T23:41:22.548916Z"
     }
    },
    "outputs": [],
@@ -173,11 +182,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-20T21:53:54.487314Z",
-     "start_time": "2022-07-20T21:53:54.471484Z"
+     "end_time": "2022-07-21T23:41:22.742693Z",
+     "start_time": "2022-07-21T23:41:22.723038Z"
     }
    },
    "outputs": [],
@@ -255,9 +264,11 @@
     "    if _np.all(beta_0==_np.ones(1)):\n",
     "        _ = _np.zeros(p)\n",
     "        _y = y[_np.intersect1d(outcome_iid, gene_iid, assume_unique=True, return_indices=True)[1]]\n",
+    "        _y -= _np.mean(_y)\n",
     "        for j in SNP_ind:\n",
     "            _X = bed.read(_np.s_[:,j], dtype=_np.int8).flatten()\n",
     "            _X = _X[gene_ind] # get gene iid also in outcome iid\n",
+    "            _X -= _np.mean(_X)\n",
     "            _[j] = _X@_y\n",
     "        beta = _np.sign(_)\n",
     "        beta = _np.hstack((np.array([0]), beta))\n",
@@ -344,50 +355,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-20T21:53:55.055606Z",
-     "start_time": "2022-07-20T21:53:54.489064Z"
+     "end_time": "2022-07-21T23:43:29.061703Z",
+     "start_time": "2022-07-21T23:43:27.499569Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "L_convex is: 951.1723835414942\n",
+      "[[3.39674760e-04 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
+      "  0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
+      "  0.00000000e+00 0.00000000e+00]\n",
+      " [6.79223625e-04 0.00000000e+00 0.00000000e+00 5.83270060e-06\n",
+      "  0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
+      "  0.00000000e+00 0.00000000e+00]\n",
+      " [1.01864247e-03 0.00000000e+00 0.00000000e+00 4.26284452e-05\n",
+      "  0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
+      "  0.00000000e+00 0.00000000e+00]\n",
+      " [1.35792015e-03 0.00000000e+00 0.00000000e+00 1.10370660e-04\n",
+      "  0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
+      "  0.00000000e+00 0.00000000e+00]\n",
+      " [1.69704385e-03 2.04021521e-05 0.00000000e+00 2.09041039e-04\n",
+      "  0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
+      "  0.00000000e+00 0.00000000e+00]\n",
+      " [2.03599407e-03 7.17175873e-05 0.00000000e+00 3.38614502e-04\n",
+      "  0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
+      "  0.00000000e+00 0.00000000e+00]\n",
+      " [2.37474834e-03 1.53917913e-04 0.00000000e+00 4.99062955e-04\n",
+      "  0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
+      "  0.00000000e+00 0.00000000e+00]\n",
+      " [2.71328397e-03 2.66974492e-04 0.00000000e+00 6.90358061e-04\n",
+      "  0.00000000e+00 2.31436869e-06 0.00000000e+00 0.00000000e+00\n",
+      "  0.00000000e+00 0.00000000e+00]\n",
+      " [3.05157172e-03 4.10852084e-04 0.00000000e+00 9.12464953e-04\n",
+      "  0.00000000e+00 3.54687686e-05 0.00000000e+00 8.05949027e-06\n",
+      "  2.16507996e-06 0.00000000e+00]\n",
+      " [3.38955509e-03 5.85488078e-04 0.00000000e+00 1.16532181e-03\n",
+      "  1.08174652e-05 9.94003576e-05 1.37545540e-05 4.69068190e-05\n",
+      "  3.51198380e-05 2.11419939e-05]\n",
+      " [3.72714652e-03 7.90788796e-04 0.00000000e+00 1.44883677e-03\n",
+      "  5.23390760e-05 1.94014780e-04 5.82108368e-05 1.16450027e-04\n",
+      "  9.87715608e-05 7.29855288e-05]\n",
+      " [4.06424565e-03 1.02664767e-03 0.00000000e+00 1.76290568e-03\n",
+      "  1.24460243e-04 3.19204554e-04 1.33264216e-04 2.16584735e-04\n",
+      "  1.93014801e-04 1.55425994e-04]\n",
+      " [4.40075251e-03 1.29295852e-03 0.00000000e+00 2.10742479e-03\n",
+      "  2.27076771e-04 4.74862606e-04 2.38810455e-04 3.47206956e-04\n",
+      "  3.17744510e-04 2.68359177e-04]\n",
+      " [4.73656752e-03 1.58961559e-03 0.00000000e+00 2.48229075e-03\n",
+      "  3.60084863e-04 6.60882268e-04 3.74745714e-04 5.08213101e-04\n",
+      "  4.72856038e-04 4.11681258e-04]\n",
+      " [5.07159147e-03 1.91651353e-03 0.00000000e+00 2.88740057e-03\n",
+      "  5.23381116e-04 8.77157282e-04 5.40966548e-04 6.99499976e-04\n",
+      "  6.58245136e-04 5.85288817e-04]\n",
+      " [5.40572555e-03 2.27354736e-03 0.00000000e+00 3.32265169e-03\n",
+      "  7.16862522e-04 1.12358179e-03 7.37369912e-04 9.20964784e-04\n",
+      "  8.73807951e-04 7.89078826e-04]\n",
+      " [5.73887131e-03 2.66061255e-03 0.00000000e+00 3.78794194e-03\n",
+      "  9.40426471e-04 1.40005036e-03 9.63853154e-04 1.17250512e-03\n",
+      "  1.11944103e-03 1.02294866e-03]\n",
+      " [6.07093044e-03 3.07760470e-03 2.93165568e-06 4.28316928e-03\n",
+      "  1.19397050e-03 1.70645769e-03 1.22031376e-03 1.45401875e-03\n",
+      "  1.39504109e-03 1.28679584e-03]\n",
+      " [6.40180211e-03 3.52441702e-03 3.58348991e-05 4.80822917e-03\n",
+      "  1.47738960e-03 2.04269602e-03 1.50664662e-03 1.76540113e-03\n",
+      "  1.70050245e-03 1.58051549e-03]\n",
+      " [6.73137853e-03 4.00096557e-03 9.86313584e-05 5.36303968e-03\n",
+      "  1.79060133e-03 2.40868027e-03 1.82276901e-03 2.10657084e-03\n",
+      "  2.03574237e-03 1.90402562e-03]]\n"
+     ]
+    }
+   ],
    "source": [
-    "import pandas as pd\n",
     "import numpy as np\n",
     "from bed_reader import open_bed\n",
     "\n",
-    "bed_file = r\"/home/kyang/UKBB/genetics/cal/ukb_cal_chr22_v2.bed\"\n",
-    "bim_file = r\"/home/kyang/UKBB/genetics/cal/ukb_snp_chr22_v2.bim\"\n",
-    "fam_file = r\"/home/kyang/UKBB/genetics/cal/ukb45551_cal_chr22_v2_s488264.fam\"\n",
-    "outcome_file = r\"/home/kyang/UKBB/tabular/archive/40663/ukb40663.csv\"\n",
-    "fields = [\"eid\", \"2443-0.0\"]\n",
+    "bed_file = r\"./sim/sim1.bed\"\n",
+    "bim_file = r\"./sim/sim1.bim\"\n",
+    "fam_file = r\"./sim/sim1.fam\"\n",
     "\n",
-    "diabetes = pd.read_csv(outcome_file, skipinitialspace=True, usecols=fields, encoding= 'unicode_escape').dropna()\n",
-    "outcome_iid = list(diabetes.loc[:,\"eid\"])\n",
-    "outcome_iid = np.array(list(map(str, outcome_iid)))\n",
-    "outcome = np.array(list(diabetes.loc[:,\"2443-0.0\"]))\n",
-    "print(outcome[:20])\n",
-    "outcome = (outcome == 1).astype(int)\n",
+    "_bed = open_bed(filepath=bed_file, fam_filepath=fam_file, bim_filepath=bim_file)\n",
+    "outcome = np.random.rand(_bed.iid_count)\n",
+    "outcome_iid = _bed.iid\n",
+    "true_beta = np.array([12.,-15.,16.])\n",
     "\n",
-    "bed1 = open_bed(filepath=bed_file, fam_filepath=fam_file, bim_filepath=bim_file)\n",
+    "# here since the plink files are very small, I just use Python to calculate L_convex -- normally it should be calculated using other softwares, e.g., flashpca \n",
+    "temp = np.zeros((_bed.iid_count, _bed.sid_count))\n",
+    "for j in np.arange(_bed.sid_count):\n",
+    "    temp[:,j] = _bed.read(_np.s_[:,j], dtype=_np.int8).flatten()\n",
+    "L_convex = 1/_bed.iid_count*(_np.linalg.eigvalsh(temp@temp.T)[-1])\n",
+    "print(\"L_convex is:\", L_convex)\n",
     "\n",
-    "N = len(bed1.iid)\n",
-    "p = len(bed1.sid)\n",
-    "SNP_ind = np.arange(300)\n",
+    "for j in np.arange(3):\n",
+    "    outcome += true_beta[j]*_bed.read(_np.s_[:,j], dtype=_np.int8).flatten()\n",
+    "\n",
+    "outcome = np.random.binomial(1, np.tanh(outcome/2)/2+.5)\n",
+    "\n",
+    "iid_ind = np.random.permutation(np.arange(_bed.iid_count))\n",
+    "\n",
+    "# outcome = outcome[iid_ind]\n",
+    "# outcome_iid = outcome_iid[iid_ind]\n",
     "\n",
     "print(SNP_solution_path_logistic(bed_file=bed_file, \n",
-    "                    bim_file=bim_file, \n",
-    "                    fam_file=fam_file, \n",
-    "                    outcome=outcome, \n",
-    "                    outcome_iid=outcome_iid, \n",
-    "                    lambda_=np.linspace(.005,.05,20)[::-1],\n",
-    "                    SNP_ind=SNP_ind, \n",
-    "                    L_convex=1e-2, \n",
-    "                    beta_0 = np.ones(1),\n",
-    "                    tol=1e-2, maxit=500, penalty=\"SCAD\", a=3.7, gamma=2.))\n",
-    "\n",
-    "\n"
+    "                                bim_file=bim_file, \n",
+    "                                fam_file=fam_file, \n",
+    "                                outcome=outcome, \n",
+    "                                outcome_iid=outcome_iid, \n",
+    "                                lambda_=np.linspace(.00001,.2,20)[::-1],\n",
+    "                                SNP_ind=np.arange(10), \n",
+    "                                L_convex=L_convex, \n",
+    "                                beta_0 = np.ones(1),\n",
+    "                                tol=1e-2, maxit=500, penalty=\"SCAD\", a=3.7, gamma=2.)[:,:10])\n"
    ]
   },
   {
