--- a/logistic_SCAD_MCP_np_MODULE-SNP_parallel.ipynb
+++ b/logistic_SCAD_MCP_np_MODULE-SNP_parallel.ipynb
@@ -12,8 +12,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-20T21:53:56.968916Z",
-     "start_time": "2022-07-20T21:53:56.553649Z"
+     "end_time": "2022-07-21T23:42:03.934351Z",
+     "start_time": "2022-07-21T23:42:03.559291Z"
     }
    },
    "outputs": [],
@@ -54,8 +54,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-20T21:53:57.129442Z",
-     "start_time": "2022-07-20T21:53:56.970116Z"
+     "end_time": "2022-07-21T23:42:04.090868Z",
+     "start_time": "2022-07-21T23:42:03.935605Z"
     }
    },
    "outputs": [],
@@ -178,8 +178,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-20T21:53:57.150179Z",
-     "start_time": "2022-07-20T21:53:57.130530Z"
+     "end_time": "2022-07-21T23:42:04.111104Z",
+     "start_time": "2022-07-21T23:42:04.092063Z"
     }
    },
    "outputs": [],
@@ -227,7 +227,7 @@
     "    __XTXbeta = _np.hstack(_XTXbeta)\n",
     "    _XTXbeta = _np.zeros(p+1)\n",
     "    _XTXbeta[SNP_ind+1] = __XTXbeta\n",
-    "    _XTXbeta[0] = [_np.sum(_)]\n",
+    "    _XTXbeta[0] = _np.sum(_)\n",
     "    del _\n",
     "    del __XTXbeta\n",
     "    return _XTXbeta/(2.*N)\n",
@@ -274,7 +274,9 @@
     "    p = len(list(bed.sid))\n",
     "    gene_iid = _np.array(list(bed.iid))\n",
     "    N = len(_np.intersect1d(outcome_iid, gene_iid, assume_unique=True, return_indices=True)[1])\n",
-    "    if _np.all(beta_0==_np.ones(1)):        \n",
+    "    if _np.all(beta_0==_np.ones(1)):\n",
+    "        _y = y[_np.intersect1d(outcome_iid, gene_iid, assume_unique=True, return_indices=True)[1]]\n",
+    "        _y -= _np.mean(_y)\n",
     "        def __parallel_assign(_ind):\n",
     "            import numpy as _np\n",
     "            k=0\n",
@@ -282,11 +284,11 @@
     "            for j in _ind:\n",
     "                _X = bed.read(_np.s_[:,j], dtype=_np.int8).flatten()\n",
     "                _X = _X[gene_ind] # get gene iid also in outcome iid\n",
-    "                __[k] = _X@y\n",
+    "                _X -= _np.mean(_X)\n",
+    "                __[k] = _X@_y\n",
     "                k += 1\n",
     "            return __\n",
     "        # multiprocessing starts here\n",
-    "        _y = y[_np.intersect1d(outcome_iid, gene_iid, assume_unique=True, return_indices=True)[1]]\n",
     "        n_slices = _np.ceil(len(SNP_ind)/chunck_size)\n",
     "        with _mp.Pool(_mp.cpu_count()) as pl:\n",
     "            _XTy = pl.map(__parallel_assign, _np.array_split(SNP_ind, n_slices))\n",
@@ -379,47 +381,49 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-20T21:53:57.731159Z",
-     "start_time": "2022-07-20T21:53:57.151493Z"
+     "end_time": "2022-07-21T23:55:58.846182Z",
+     "start_time": "2022-07-21T23:42:04.112481Z"
     }
    },
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
     "import numpy as np\n",
     "from bed_reader import open_bed\n",
     "\n",
-    "bed_file = r\"/home/kyang/UKBB/genetics/cal/ukb_cal_chr22_v2.bed\"\n",
-    "bim_file = r\"/home/kyang/UKBB/genetics/cal/ukb_snp_chr22_v2.bim\"\n",
-    "fam_file = r\"/home/kyang/UKBB/genetics/cal/ukb45551_cal_chr22_v2_s488264.fam\"\n",
-    "outcome_file = r\"/home/kyang/UKBB/tabular/archive/40663/ukb40663.csv\"\n",
-    "fields = [\"eid\", \"2443-0.0\"]\n",
+    "bed_file = r\"./sim/sim1.bed\"\n",
+    "bim_file = r\"./sim/sim1.bim\"\n",
+    "fam_file = r\"./sim/sim1.fam\"\n",
     "\n",
-    "diabetes = pd.read_csv(outcome_file, skipinitialspace=True, usecols=fields, encoding= 'unicode_escape').dropna()\n",
-    "outcome_iid = list(diabetes.loc[:,\"eid\"])\n",
-    "outcome_iid = np.array(list(map(str, outcome_iid)))\n",
-    "outcome = np.array(list(diabetes.loc[:,\"2443-0.0\"]))\n",
-    "print(outcome[:20])\n",
-    "outcome = (outcome == 1).astype(int)\n",
+    "_bed = open_bed(filepath=bed_file, fam_filepath=fam_file, bim_filepath=bim_file)\n",
+    "outcome = np.random.rand(_bed.iid_count)\n",
+    "outcome_iid = _bed.iid\n",
+    "true_beta = np.array([12.,-15.,16.])\n",
     "\n",
-    "bed1 = open_bed(filepath=bed_file, fam_filepath=fam_file, bim_filepath=bim_file)\n",
+    "# here since the plink files are very small, I just use Python to calculate L_convex -- normally it should be calculated using other softwares, e.g., flashpca \n",
+    "temp = np.zeros((_bed.iid_count, _bed.sid_count))\n",
+    "for j in np.arange(_bed.sid_count):\n",
+    "    temp[:,j] = _bed.read(_np.s_[:,j], dtype=_np.int8).flatten()\n",
+    "L_convex = 1/_bed.iid_count*(_np.linalg.eigvalsh(temp@temp.T)[-1])\n",
+    "print(\"L_convex is:\", L_convex)\n",
     "\n",
-    "N = len(bed1.iid)\n",
-    "p = len(bed1.sid)\n",
-    "SNP_ind = np.arange(300)\n",
+    "for j in np.arange(3):\n",
+    "    outcome += true_beta[j]*_bed.read(_np.s_[:,j], dtype=_np.int8).flatten()\n",
+    "\n",
+    "iid_ind = np.random.permutation(np.arange(_bed.iid_count))\n",
+    "\n",
+    "# outcome = outcome[iid_ind]\n",
+    "# outcome_iid = outcome_iid[iid_ind]\n",
     "\n",
     "print(SNP_solution_path_logistic_parallel(bed_file=bed_file, \n",
     "                                        bim_file=bim_file, \n",
     "                                        fam_file=fam_file, \n",
     "                                        outcome=outcome, \n",
     "                                        outcome_iid=outcome_iid, \n",
-    "                                        lambda_=np.linspace(.005,.05,20)[::-1],\n",
-    "                                        SNP_ind=SNP_ind, \n",
-    "                                        L_convex=1e2/N, \n",
+    "                                        lambda_=np.linspace(.00001,.2,20)[::-1],\n",
+    "                                        SNP_ind=np.arange(10), \n",
+    "                                        L_convex=L_convex, \n",
     "                                        beta_0 = np.ones(1),\n",
-    "                                        tol=1e-2, maxit=500, penalty=\"SCAD\", a=3.7, gamma=2.))\n",
-    "\n",
-    "\n"
+    "                                        tol=1e-2, maxit=500, penalty=\"SCAD\", a=3.7, gamma=2.)[:,:10])\n"
    ]
   },
   {
